# migrateenv

./: .env.example  .gitignore  Dockerfile  README.md  README_SUPABASE.md  baseline.py  baseline_1.py  docker-compose.yml  inference.py  inference.py.py  migrateenv_fix_guide_v2.docx  openenv.yaml  pyproject.toml  requirements.txt  results.json  results_final.json  results_local.json  results_v1.json  test_connection.py
__pycache__/: inference.cpython-311.pyc.2764795909680
app/: env.py  inspector.py  main.py  models.py  sanitizer.py
app/__pycache__/: env.cpython-311.pyc.2032886837296  env.cpython-311.pyc.2076363691824  main.cpython-311.pyc.2164359665328  models.cpython-311.pyc.2164447292464  models.cpython-311.pyc.2610498669520
app/db/: connection.py  loader.py
app/db/__pycache__/: connection.cpython-311.pyc.2323591479728  loader.cpython-311.pyc.2076425433264  loader.cpython-311.pyc.2324771831088
app/graders/: __init__.py  base.py  composite.py  data_grader.py  fk_grader.py  schema_grader.py  task_easy_grader.py  task_hard_grader.py  task_medium_grader.py
app/graders/__pycache__/: composite.cpython-311.pyc.1733134847408  task_easy_grader.cpython-311.pyc.2076425983520  task_hard_grader.cpython-311.pyc.2164446444496  task_medium_grader.cpython-311.pyc.2323596777568
app/tasks/: __init__.py  base.py  task_easy.py  task_hard.py  task_medium.py
db/: northwind.sql
server/: app.py
temp_files3/: COMPLETE_PRD_ALIGNMENT_FIX.md  EXECUTIVE_SUMMARY_FIX.md  task_easy_PRD_aligned.py
temp_files4/: MERGE_WORKING_CODE.md  QUICK_START_5MIN.md  composite_WORKING.py  task_easy_WORKING.py  task_hard_WORKING.py  task_medium_WORKING.py
(+3 files in other folders)
