[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "migrateenv"
version = "1.0.0"
description = "OpenEnv-compliant environment for database schema migration tasks"
requires-python = ">=3.11"
authors = [
    { name = "Blessy-karen" }
]
keywords = ["openenv", "database", "migration", "sql", "real-world"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "sqlalchemy==2.0.30",
    "psycopg2-binary==2.9.9",
    "pydantic==2.7.1",
    "pydantic-settings==2.3.0",
    "python-dotenv==1.0.1",
    "openai>=2.7.2",
    "httpx==0.27.0",
    "alembic==1.13.1",
    "tabulate==0.9.0",
    "rich==13.7.1",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "app.main:app"

[tool.openenv]
name = "migrateenv"
version = "1.0.0"
entrypoint = "app.main:app"